# jumpcutter

./: .gitignore  Cargo.toml  README.md  build.rs
app/: main.htm
app/assets/css/: main.css
app/assets/js/: jumpcutter.js  main.js  read_pipe.js
src/: main.rs  wavefile.rs
